--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
@@ -3,7 +3,6 @@ title: Case Statement
 sidebar: 
   label: " - Case Statement"
 ---
-
 import MySwiper from '../../../../../../components/react/myswiper.jsx'
 
 import caseStatementSlide01 from './images/control-flow-statements-in-depth/control-flow-case-statement-01.png';
@@ -124,8 +123,8 @@ export const sliderImagesCaseStatement = [
   }
 ];
 
+The case statement is the second kind of branching statement. This allows you to create paths that execute based on matching a value from an expression. This allows one case statement to handle many alternative paths, where each path checks a simple equality check against a single value.
 
-The case statement is the second kind of branching statement. This allows you to create paths that execute based on matching a value from an expression. This allows one case statement to handle many alternative paths.
 
 <a id="FigureCaseStatement"></a>
 
@@ -134,46 +133,40 @@ The case statement is the second kind of branching statement. This allows you to
 
 :::note
 
-- The case statement is a kind of **action**. It allows you to command the computer to select a path based upon the value of an expression.
-- Each path within the Case Statement has a value. When the computer executes the case statement the path values are used to determine which path will be taken. 
-- In C and Pascal the Case Statement only works with Ordinal Values. This limits you to using Character or Integer values within the Case Statement’s Expression.
-- The Case Statement has one entry point, multiple paths, and then one exit point.
+- The case statement is a kind of **instruction**. It allows you to command the computer to select a path based on the value of an expression.
+- Each path within the case statement has a value. When the computer executes the case statement's expression is compared against each path's value to determine which path to take.
+- Older languages limit the case statement to work only with integers and individual characters.
+- The case statement has one entry point, multiple paths, and then one exit point.
 
 :::
 
-### How does the case statement work?
+## Case Statement - Why, When, and How
 
-```csharp
-using static System.Console;
-using static System.Convert;
+The case statement is a more specialised branch, so it tends to be used less frequently than the [if statement](../03-1-if). To use a case statement, you need to have a single expression and branches that only test if that expression matches a given value.
 
-WriteLine("1: [S]ay Hello");
-WriteLine("2: Option 2");
-WriteLine("3: Say Bye");
-WriteLine();
-Write("Option> ");
+Looking back at the example we used for the if statement, you should see that could be coded as a case statement. Each branch only tested if the language entered by the user matched a fixed value. When the language was "C#", we ran one block, when it was "C" or "C++" we ran another, and when it was anything else we ran a different block. This is exactly the right set of requirements for using a case statement.
 
-string option = ReadLine();
+:::tip[If or case?]
 
-switch(option)
-{
-  case "1":
-  case "S":
-  case "s":
-    WriteLine("Hello");
-    break;
-  case "2":
-    WriteLine("Option 2");
-    break;
-  case "3":
-    WriteLine("Bye");
-    break;
-  default:
-    WriteLine("Not a valid option");
-}
-```
+You can code any case statement as a series of if statements. The if statement is the more flexible of the branching statements, so this is possible. This means you will use the if statement for most things.
 
-**TODO: slides - show from option = ... demo with "s" and "3" and "other"**
+:::
+
+## In C#
+
+:::tip[Syntax]
+
+The syntax for the case statement in C# uses the keyword **switch** followed by the expression to test. Within the braces. you then have a list of cases where each case has the value to match followed by a colon (:) and a list of statements. When a case is matched, the computer jumps to the statement within that case and runs the sequence from there. This means that it will drop through into the following cases unless you add a [break](../05-1-break) statement. The break is used to jump to the end of the case statement, ensuring that you skip over paths you do not want to run. This ability to fall through to other cases can be used to combine multiple case branches, as you will see in the example below.
+
+![The case statement showing switch, then an expression, and a list of cases](./images/case-statement.png)
+
+:::
+
+## How does case work?
+
+The case statement works in a very similar way to the if statement we worked through previously. The following code will achieve the same output as the example from the if statement page. With this code, you enter the value to check in the parenthesis after the **switch** keyword. For this example, the value we are looking to match is in the `language` variable. Within the body of the case statement you then have the separate cases you want to match. 
+
+Notice that we need to embed the [break](../05-1-break) statement to indicate the end of the instructions for an individual case. Also, notice how we use this to join the "C" and "C++" cases. This means that when the "C" path is matched, the control will flow through into the same set of statements that exist for the "C++" branch.
 
 ```csharp
 using static System.Console;
