--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-3-for-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-3-for-loop.mdx
@@ -4,6 +4,47 @@ sidebar:
   label: " - For Loop"
 ---
 
+There is one other loop that we need to look at: the **for loop**.
+
+The for loop is a pre-test loop, basically a specialised version of the while loop. It can do many things in C#, but it is mainly used to repeat a block of code a set number of times. You can think of it like a counting loop, with it counting from a start value to an end value. The for loop has a **control variable** that has the number of times the loop has currently run, which the loop can use to test when it is looking to see if it should end.
+
+## In C#
+
+The for loop itself is controlled by three aspects: the initialiser, condition, and increment. 
+
+- The **initialiser** appears first in the parenthesis after the `for` keyword. This is used to set the initial value for the control variable (usually
+`i` as we have noted before). If you were using a while loop, this code would appear before the start of the loop.
+- The **condition** is the expression used to determine if the body of the loop should run. This would be the same as the condition in an equivalent while loop.
+- The last code in the parenthesis is the **post-loop increment**, this updates the control variable and runs **after** the body of the loop. In an equivalent while loop, this would be the increment of the control variable at the end of the body in the while loop.
+
+## For - Why, When, and How
+
+The standard format of a for loop is: `for(i = 0; i < size; i++)\{...\}`. This can be read in parts as:
+
+- for `i`, starting at 0
+- while `i` is less than `size`, do the body of the loop
+- then increment `i` (using `i++`).
+
+This will then give you a loop that runs `size` times - with i going from 0 to `size` where it terminates the loop.
+
+Any time you have a loop where you want to repeat a set number of times, the for loop is the statement you are most likely to want to use. It provides you with the mechanics you need to achieve this, and the standard format for the loop is usually what you are after. You can also tweak aspects to do things like count backwards or loop from a value other than 0.
+
+## How does for work?
+
+The example we used for the [while loop](../04-1-while-loop) was a counting loop, so it is perfect to transform to a for loop. The looping part of this example is shown below, with comments pointing out the three aspects we need to code into the for loop.
+
+```csharp
+int i =  0; // initialiser
+
+while (i < target) // condition
+{
+  WriteLine(i);
+  i++; // increment
+}
+```
+
+The following code shows the example using a for loop instead of a while loop. Notice that you can match up the initialiser, condition, and increment with the code in the while loop. This will run in the same way as the while loop did, it just brings these three parts together more clearly.
+
 ```csharp
 using static System.Console;
 using static System.Convert;
@@ -18,3 +59,13 @@ for(int i =  0; i < target; i++)
   WriteLine(i);
 }
 ```
+
+Use the following images to see how this works.
+
+**TODO: add slider. Show one example of how it runs**
+
+:::tip[Attention]
+
+Notice that the while and for are basically the same. The for loop just helps you clearly show how the control variable is being initialised, checked, and adjusted in each loop.
+
+:::
