Added control flow while loop slideshow to book

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-1-while-loop.mdx
@@ -207,7 +207,7 @@ You will very often need to create working variables, like `i`, to help keep tra
 
 Use the following images to see how this runs.
 
-**TODO add slider her... show 3 times but also -1 times**
+<MySwiper client:only height="" images={sliderImagesWhileLoop}></MySwiper>
 
 :::tip[Attention]
 
