minor fix to case

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-2-case.mdx
@@ -201,6 +201,6 @@ Use the following images to see how this code runs.
 
 :::tip[Attention]
 
-Grouping cases as shown here is a ok, but to help avoid unexpected fallthrough, the C# language will give you an error if you do not have a break statement if you have code within a branch. You can jump to another case at the end of any given case by using `goto case` and providing the constant you want to jump to or `goto default`.
+Grouping cases as shown here is okay, but to help avoid unexpected fall through, the C# language will give you an error if you do not have a break statement if you have code within a branch. You can jump to another case at the end of any given case by using the `goto case` and providing the constant you want to jump to or `goto default`.
 
 :::
