--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-3-for-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/04-3-for-loop.mdx
@@ -16,11 +16,6 @@ import forLoopSlide07 from './images/control-flow-statements-in-depth/control-fl
 import forLoopSlide08 from './images/control-flow-statements-in-depth/control-flow-for-loop-08.png';
 import forLoopSlide09 from './images/control-flow-statements-in-depth/control-flow-for-loop-09.png';
 import forLoopSlide10 from './images/control-flow-statements-in-depth/control-flow-for-loop-10.png';
-import forLoopSlide11 from './images/control-flow-statements-in-depth/control-flow-for-loop-11.png';
-import forLoopSlide12 from './images/control-flow-statements-in-depth/control-flow-for-loop-12.png';
-import forLoopSlide13 from './images/control-flow-statements-in-depth/control-flow-for-loop-13.png';
-import forLoopSlide14 from './images/control-flow-statements-in-depth/control-flow-for-loop-14.png';
-
 
 There is one other loop that we need to look at: the **for loop**.
 
@@ -86,124 +81,98 @@ Use the following images to see how this works.
 export const sliderImagesForLoop = [
   {
     src: forLoopSlide01.src,
-    altText: "Lines 1-3: The int variable 'target' is allocated space on the stack.",
+    altText: "Lines 1-3 prompt the user for input, which is retrieved, converted to an integer, and stored in the variable 'target' on the stack",
     tipStart: 1,
     tips: [
-      "Lines 1 and 2 import some System libraries",
-      "Line 3 allocates space on the stack for the int variable 'target'",
+      "Lines 1-3 prompt the user for input, which is retrieved, converted to an integer, and stored in the variable 'target' on the stack",
       "The program counter is increased from line 3 to line 4"
     ]
   },
   {
     src: forLoopSlide02.src,
-    altText: "Line 4 writes 'Count to: ' to the terminal",
+    altText: "The for loop begins and as step 4a, the variable 'i' is allocated space on the stack and initialized to 0...",
     tipStart: 2,
     tips: [
-      "Line 4 writes 'Count to: ' to the terminal",
-      "The program counter is increased from line 4 to line 5"
+      "Line 4 begins the for loop",
+      "The first step (4a), is the (optional) declaration and initialization",
+      "In this case, the variable 'i' is allocated space on the stack and initialized to 0",
+      "Control then passes to step 4b..."
     ]
   },
   {
     src: forLoopSlide03.src,
-    altText: "Line 5 reads the user input into the variable 'target', in this case the integer value 10",
+    altText: "Step 4b performs the comparison which evaluates to true",
     tipStart: 3,
     tips: [
-      "Line 5 reads the user input into the variable 'target', in this case the integer value 10",
-      "It does this in multiple steps: <ul><li>Step 5a reads the user input as a String</li><li>Step 5b converts the string to an integer</li><li>Step 5c saves the integer value to the variable on the stack</li></ul>",
-      "The program counter is increased from line 5 to line 6"
+      "Step 4b is the (optional) comparison",
+      "Since 0 is less than 10, the comparison evaluates to <span class='booleanTrue'>true</span>",
+      "The program counter then moves from line 5 (start of the for block) to line 6 (the first line of the block)"
     ]
   },
   {
     src: forLoopSlide04.src,
-    altText: "Line 6 begins with the initialization step of the for loop - 'i' is initialized to 0",
+    altText: "Line 6 writes the current value of 'i' (0) to the terminal",
     tipStart: 4,
     tips: [
-      "Line 6 begins the for loop",
-      "The first step (6a), is the (optional) declaration and initialization: the variable 'i' is allocated space on the stack and initialized to 0..."
+      "Line 6 writes the current value of 'i' (0) to the terminal",
+      "Control passes from line 7 (end of the for block) back to step 4c..."
     ]
   },
   {
     src: forLoopSlide05.src,
-    altText: "Step 6b performs the comparison which evaluates to true",
+    altText: "Step 4c increments the value of 'i' by one, before passing control back to step 4b (the comparison)",
     tipStart: 5,
     tips: [
-      "...control then moves to step 6b which is the comparison",
-      "Since 0 is less than 10, the comparison evaluates to <span class='booleanTrue'>true</span>",
-      "The program counter then moves to line 7"
+      "Step 4c is the (optional) increment or decrement statement",
+      "In this case the value of 'i' is incremented by 1 (from 0 to 1)",
+      "Control then passes back to step 4b (the comparison)"
     ]
   },
   {
     src: forLoopSlide06.src,
-    altText: "Line 7 signals the beginning of the for loop code block",
+    altText: "Since 1 is less than 10, the comparison evaluates to true, control passes back to line 6",
     tipStart: 6,
     tips: [
-      "Line 7 signals the beginning of the for loop code block",
-      "The program counter increments to line 8"
+      "Since 1 is less than 10, the comparison evaluates to <span class='booleanTrue'>true</span>",
+      "The program counter then increments again through line 5 to line 6"
     ]
   },
   {
     src: forLoopSlide07.src,
-    altText: "Line 8 writes the current value of 'i' (0) to the terminal",
+    altText: "Line 6 writes the current value of 'i' (1) to the terminal",
     tipStart: 7,
     tips: [
-      "Line 8 writes the current value of 'i' (0) to the terminal",
-      "The program counter increments to line 9"
+      "Line 6 writes the current value of 'i' (1) to the terminal",
+      "Control passes from line 7 (end of the for block) back up to step 4c"
     ]
   },
   {
     src: forLoopSlide08.src,
-    altText: "Line 9 closes the body of the for loop, and at this point control jumps back to line 6 (Step 6c)",
+    altText: "Let's jump ahead to where the number 9 has been printed and i increments to 10",
     tipStart: 8,
     tips: [
-      "Line 9 closes the body of the for loop",
-      "At this point control jumps back to line 6 (Step 6c)"
+      "The program loops through like this printing numbers",
+      "Let's jump ahead to where the number 9 has just been printed to the screen (rather than the number 1 as on the previous slide)",
+      "Now at step 4c, i is incremented by 1 (from 9 to 10)",
+      "Control passes back to step 4b, the comparison"
     ]
   },
   {
     src: forLoopSlide09.src,
-    altText: "Step 6c increments the value of 'i' by one, before passing control back to step 6b (the comparison)",
+    altText: "Now the comparison evaluates to false (10 is not less than 10), and the for loop ends",
     tipStart: 9,
     tips: [
-      "Step 6c is the (optional) increment or decrement statement",
-      "In this case the value of 'i' is incremented by 1",
-      "Control then passes back to step 6b (the comparison)"
+      "Now the comparison evaluates to <span class='booleanFalse'>false</span> (since 10 is not less than 10)",
+      "This signals the end of the for loop, and control passes to the first line after the closing brace of the for loop - line 8"
     ]
   },
   {
     src: forLoopSlide10.src,
-    altText: "The comparison evaluates to true, and control moves through line 7 to line 8",
+    altText: "Line 8 prints 'Bye...' to the terminal and the program ends",
     tipStart: 10,
     tips: [
-      "Since 1 is less than 10, the comparison evaluates to <span class='booleanTrue'>true</span>",
-      "The program counter then moves through line 7 to line 8"
-    ]
-  },
-  {
-    src: forLoopSlide11.src,
-    altText: "Line 8 writes the current value of 'i' (1) to the terminal, and control passes back to step 6c",
-    tipStart: 11,
-    tips: [
-      "Line 8 writes the current value of 'i' (1) to the terminal",
-      "The program counter increments to line 9, then control passes back to step 6c"
-    ]
-  },
-  {
-    src: forLoopSlide12.src,
-    altText: "Let's jump ahead to where we have just printed '9' to the terminal. In this case at step 6c, 'i' is incremented from 9 to 10, then control passes to step 6b (the comparison) once more",
-    tipStart: 12,
-    tips: [
-      "Let's jump ahead to the scenario where we have just printed '9' to the terminal",
-      "In this case at step 6c, 'i' is incremented from 9 to 10",
-      "Control then passes to step 6b, the comparison once more..."
-    ]
-  },
-  {
-    src: forLoopSlide13.src,
-    altText: "This time the comparison at step 6b evaluates to false which ends the for loop. The program counter increments and the program ends.",
-    tipStart: 13,
-    tips: [
-      "...This time the comparison at step 6b evaluates to <span class='booleanFalse'>false</span>",
-      "This effectively ends the for loop. The program counter increments and the program ends"
+      "Line 8 prints 'Bye...' to the terminal",
+      "Then the program ends"
     ]
   }
 ];
